--- a/Tpl/Admin/Default/Common/incTop.html
+++ b/Tpl/Admin/Default/Common/incTop.html
@@ -5,4 +5,8 @@
     <link href="__PUBLIC__/Admin/css/wysiwyg.css" rel="stylesheet" type="text/css" />
     <link href="__PUBLIC__/Admin/css/styles.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src='__PUBLIC__/Lib/jquery/js/jquery-1.8.3.js'></script>
+    <script src="__PUBLIC__/Lib/validate/jquery.validate.1.9.js"></script>
+    <script src="__PUBLIC__/Lib/validate/jquery.metadata.js"></script>
+    <script src="__PUBLIC__/Lib/validate/messages_cn.js"></script>
+    <script src="__PUBLIC__/Admin/js/global.js"></script>
 </head>
