--- a/branches/2.0/Tpl/Admin/Default/Common/incBreadcrumb.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incBreadcrumb.html
@@ -2,9 +2,9 @@
 <div id="breadcrumb">
     <ul>	
         <li><img src="__PUBLIC__/Admin/images/icons/icon_breadcrumb.png" alt="Location" /></li>
-        <li><strong>Location:</strong></li>
-        <li><a href="#" title="">Sub Section</a></li>
+        <li><a href="#" title="">首页</a>&nbsp;:</li>
+        <li>商品管理</li>
         <li>/</li>
-        <li class="current">Control Panel</li>
+        <li class="current">商品列表</li>
     </ul>
 </div>
