--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -1,4 +1,4 @@
-<div id="leftside">
+<div id="leftside" class="leftside">
     <div class="user">
         <a href='{:U("Admin/System/pageEditAdmin","uid=$uid")}'><img src="{$Think.session.pic|default='__PUBLIC__/Admin/images/avatar.png'}" width="44" height="44" class="hoverimg" alt="Avatar" /></a>
         <p>登陆者:</p>
@@ -11,32 +11,36 @@
         <p><a href="" title="" class="notifypop">New Notifications</a></p>
         <p class="smltxt">(Click to open notifications)</p>
     </div>
+    <div id="sliderNavBox" class="sliderNavBox">
+        <div style="display: block; overflow: visible; margin-top: 0px;" id="sliderNavBoxInner">
+            <ul id="nav">
+                <li>
+                    <ul class="navigation">
+                        <li class="heading selected">Current Section</li>
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="collapsed heading">Section Heading</a>
+                    <ul class="navigation">
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="expanded heading">Section Heading</a>
+                    <ul class="navigation">
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">Section link here</a></li>
+                    </ul>
+                </li>            
+            </ul>
+        </div>
+        
+    </div>
     
-    <ul id="nav">
-        <li>
-            <ul class="navigation">
-                <li class="heading selected">Current Section</li>
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="collapsed heading">Section Heading</a>
-            <ul class="navigation">
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="expanded heading">Section Heading</a>
-            <ul class="navigation">
-<!--                 class="likelogin"-->
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-                <li><a href="#" title="">Section link here</a></li>
-            </ul>
-        </li>            
-    </ul>
 </div>
