--- a/branches/2.0/Tpl/Admin/Default/layout.html
+++ b/branches/2.0/Tpl/Admin/Default/layout.html
@@ -2,27 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <include file="Common:incTop" />
     <body id="homepage">
-        <div id="header">
-            <a href="" title=""><img src="__PUBLIC__/Admin/images/cp_logo.png" alt="Control Panel" class="logo" /></a>
-            <div id="searcharea">
-                <p class="left smltxt"><a href="#" title="">Advanced</a></p>
-                <input type="text" class="searchbox" value="Search control panel..." onclick="if (this.value =='Search control panel...'){this.value=''}"/>
-                <input type="submit" value="Search" class="searchbtn" />
+        <div id="header" class="header">
+            <include file="Common:incHeader" />
+        </div>
+        <div class="contentBox">
+            <!-- 左边菜单栏 -->
+            <div class="sidebar">
+                <include file="Common:incMenu" />
+            </div>
+            <!-- 面包导航 -->
+            <div id="breadcrumb" class="breadcrumb">
+                <include file="Common:incBreadcrumb" />
+            </div>
+            <!-- 内容 -->
+            <div id="rightside" class="rightside">
+                {__CONTENT__}
             </div>
         </div>
-
-        <include file="Common:incBreadcrumb" />
-        <!-- Top Breadcrumb End -->
-
-        <!-- Right Side/Main Content Start -->
-        <div id="rightside">
-            {__CONTENT__}
-        </div>
-        <!-- Right Side/Main Content End -->
-
-        <!-- 左边菜单栏 -->
-        <include file="Common:incMenu" />
-        <!-- 左边菜单栏 -->
 
         
         <script type='text/javascript' src='__PUBLIC__/Admin/js/jquery.wysiwyg.js'></script>
