--- a/Tpl/Admin/Default/Common/incHeader.html
+++ b/Tpl/Admin/Default/Common/incHeader.html
@@ -1,4 +1,4 @@
-<a href="" title=""><img src="__PUBLIC__/Admin/images/cp_logo.png" alt="Control Panel" class="logo" /></a>
+<!--<a href="" title=""><img src="__PUBLIC__/Admin/images/cp_logo.png" alt="Control Panel" class="logo" /></a>-->
 <div id="searcharea">
     <p class="left smltxt"><a href="#" title="">Advanced</a></p>
     <input type="text" class="searchbox" value="Search control panel..." onclick="if (this.value =='Search control panel...'){this.value=''}"/>
