--- a/branches/2.0/Tpl/Admin/Default/System/pageEditAdminPasswd.html
+++ b/branches/2.0/Tpl/Admin/Default/System/pageEditAdminPasswd.html
@@ -3,7 +3,7 @@
         <h2>修改密码</h2>
     </div>
     <div class="contentbox">
-        <form action="{:U('Admin/System/doEditPasswd')}" method="post">
+        <form action="{:U('Admin/System/doEditPasswd')}" method="post" autocomplete="on">
             <p>
                 <label for="textfield"><strong>旧密码:</strong></label>
                 <input type="password" id="textfield" class="inputbox" name="old_passwd" required /> <br />
