--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -14,34 +14,39 @@
     </div>
     <div class="notifications">
         <p class="notifycount"><a href="" title="" class="notifypop">10</a></p>
-        <p><a href="" title="" class="notifypop">New Notifications</a></p>
-        <p class="smltxt">(Click to open notifications)</p>
+        <p><a href="" title="" class="notifypop">最新通知</a></p>
+        <p class="smltxt">(点击可打开通知)</p>
     </div>
     <div id="sliderNavBox" class="sliderNavBox">
         <div style="display: block; overflow: visible; margin-top: 0px;" id="sliderNavBoxInner">
             <ul id="nav">
-                <li>
+<!--                <li>
                     <ul class="navigation">
                         <li class="heading selected">Current Section</li>
                         <li><a href="#" title="">Section link here</a></li>
                         <li><a href="#" title="">Section link here</a></li>
                         <li><a href="#" title="">Section link here</a></li>
                     </ul>
-                </li>
+                </li>-->
                 <li>
-                    <a class="collapsed heading">Section Heading</a>
+                    <a class="collapsed heading">管理员管理</a>
                     <ul class="navigation">
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">管理员列表</a></li>
+                        <li><a href="#" title="">添加管理员</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a class="expanded heading">Section Heading</a>
+                    <a class="collapsed heading">权限组管理</a>
                     <ul class="navigation">
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
+                        <li><a href="#" title="">角色列表</a></li>
+                        <li><a href="#" title="">添加角色</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="expanded heading">权限节点管理</a>
+                    <ul class="navigation">
+                        <li><a href="#" title="">节点列表</a></li>
+                        <li><a href="#" title="">添加节点</a></li>
                     </ul>
                 </li>            
             </ul>
