--- a/Tpl/Admin/Default/layout.html
+++ b/Tpl/Admin/Default/layout.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <include file="Common:incTop" />
     <body id="homepage">
+        <div id="J_ajax_loading" class="ajax_loading">提交请求中，请稍候...</div>
         <div id="header" class="header">
             <include file="Common:incHeader" />
         </div>
