--- a/Tpl/Admin/Default/Common/incMenu.html
+++ b/Tpl/Admin/Default/Common/incMenu.html
@@ -29,14 +29,15 @@
                     </ul>
                 </li>-->
                 <li>
-                    <a class="collapsed heading">管理员管理</a>
+                    <a class="expanded heading">管理员管理</a>
                     <ul class="navigation">
                         <li><a href="{:U('Admin/System/pageList')}" title="管理员列表">管理员列表</a></li>
                         <li><a href="{:U('Admin/System/pageAddAdmin')}" title="添加管理员">添加管理员</a></li>
+                        <li><a href="{:U('Admin/System/pageLogList')}" title="添加管理员">管理员登陆日志</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a class="collapsed heading">权限组管理</a>
+                    <a class="expanded heading">权限组管理</a>
                     <ul class="navigation">
                         <li><a href="#" title="">角色列表</a></li>
                         <li><a href="#" title="">添加角色</a></li>
@@ -48,7 +49,14 @@
                         <li><a href="#" title="">节点列表</a></li>
                         <li><a href="#" title="">添加节点</a></li>
                     </ul>
-                </li>            
+                </li>
+                <li>
+                    <a class="expanded heading">菜单管理</a>
+                    <ul class="navigation">
+                        <li><a href="#" title="">菜单列表</a></li>
+                        <li><a href="#" title="">添加菜单</a></li>
+                    </ul>
+                </li>  
             </ul>
         </div>
         
