--- a/Tpl/Admin/Default/System/pageEditAdmin.html
+++ b/Tpl/Admin/Default/System/pageEditAdmin.html
@@ -29,14 +29,14 @@
 				<td>
                     <input name="u_password" id="u_password" type="password" class="input rounded" value="" size="30" maxlength="50" validate="{ rangelength:[6,20],messages:{required:'密码不能为空'}}" /> 
                 </td>
-				<td class="field"><span class="red">[必填]</span>6 - 20个字符组成.不修改则留空</td>
+				<td class="field">6 - 20个字符组成.不修改则留空</td>
 			</tr>
             <tr>
 				<td class="name">确认密码：</td>
 				<td>
                     <input name="confirm_password" type="password" class="input rounded" value="" size="30" maxlength="50" validate="{ rangelength:[6,20],equalTo:'#u_password'}" /> 
                 </td>
-				<td class="field"><span class="red">[必填]</span>6 - 20个字符组成.不修改则留空</td>
+				<td class="field">6 - 20个字符组成.不修改则留空</td>
 			</tr>
 			<tr>
 				<td class="name">姓名：</td>
