--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -33,7 +33,7 @@
                     <ul class="navigation">
                         <li><a href="{:U('Admin/System/pageList')}" title="管理员列表">管理员列表</a></li>
                         <li><a href="{:U('Admin/System/pageAddAdmin')}" title="添加管理员">添加管理员</a></li>
-                        <li><a href="{:U('Admin/System/pageLogList')}" title="添加管理员">管理员登陆日志</a></li>
+                        <li><a href="{:U('Admin/System/pageLogList')}" title="管理员登陆日志">管理员登陆日志</a></li>
                     </ul>
                 </li>
                 <li>
@@ -53,8 +53,8 @@
                 <li>
                     <a class="expanded heading">菜单管理</a>
                     <ul class="navigation">
-                        <li><a href="#" title="">菜单列表</a></li>
-                        <li><a href="#" title="">添加菜单</a></li>
+                        <li><a href="{:U('Admin/RoleNav/pageList')}" title="菜单列表">菜单列表</a></li>
+                        <li><a href="{:U('Admin/RoleNav/addRoleNav')}" title="添加菜单">添加菜单</a></li>
                     </ul>
                 </li>  
             </ul>
