--- a/Tpl/Admin/Default/RoleNode/addRoleNode.html
+++ b/Tpl/Admin/Default/RoleNode/addRoleNode.html
@@ -15,8 +15,8 @@
         <table class="list" cellpadding="0" cellspacing="1" border="0">
 			<tr>
 				<td class="name">说明：</td>
-				<td style="padding-bottom:0px;">
-                    <p>
+				<td style="padding:12px 8px;">
+                    <p style="padding-bottom:0px;">
                         1. 只填写模块，为模块的公共授权<br/>
                         2. 填写操作与模块，为指定模块中节点的授权
                     </p>
