--- a/Tpl/Admin/Default/Common/incMenu.html
+++ b/Tpl/Admin/Default/Common/incMenu.html
@@ -31,7 +31,7 @@
                 <li>
                     <a class="expanded heading">管理员管理</a>
                     <ul class="navigation">
-                        <li><a href="{:U('Admin/System/pageList')}" title="管理员列表">管理员列表</a></li>
+                        <li><a href="{:U('Admin/System/index')}" title="管理员列表">管理员列表</a></li>
                         <li><a href="{:U('Admin/System/pageAddAdmin')}" title="添加管理员">添加管理员</a></li>
                         <li><a href="{:U('Admin/System/pageLogList')}" title="管理员登陆日志">管理员登陆日志</a></li>
                     </ul>
@@ -39,21 +39,21 @@
                 <li>
                     <a class="expanded heading">权限组管理</a>
                     <ul class="navigation">
-                        <li><a href="{:U('Admin/Role/pageList')}" title="">角色列表</a></li>
+                        <li><a href="{:U('Admin/Role/index')}" title="">角色列表</a></li>
                         <li><a href="{:U('Admin/Role/addRole')}" title="">添加角色</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class="expanded heading">权限节点管理</a>
                     <ul class="navigation">
-                        <li><a href="{:U('Admin/RoleNode/pageList')}" title="">节点列表</a></li>
+                        <li><a href="{:U('Admin/RoleNode/index')}" title="">节点列表</a></li>
                         <li><a href="{:U('Admin/RoleNode/addRoleNode')}" title="">添加节点</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class="expanded heading">菜单管理</a>
                     <ul class="navigation">
-                        <li><a href="{:U('Admin/RoleNav/pageList')}" title="菜单列表">菜单列表</a></li>
+                        <li><a href="{:U('Admin/RoleNav/index')}" title="菜单列表">菜单列表</a></li>
                         <li><a href="{:U('Admin/RoleNav/addRoleNav')}" title="添加菜单">添加菜单</a></li>
                     </ul>
                 </li>  
